Fix tutorial menu starting with a small size on some pages
The nav-tutorial menu would get squashed depending on its content.

--- a/assets/scss/components/nav-tutorial.scss
+++ b/assets/scss/components/nav-tutorial.scss
@@ -3,7 +3,7 @@
 $icon-width: 48px;
 
 .nav-tutorial {
-  width: 300px;
+  min-width: 300px;
   padding: $spacing-small;
 
   a {
